[tool.poetry]
name = "kustochecker"
version = "0.1.0"
description = ""
authors = ["Joey Dreijer <jdreijer@d3vzer0.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
pythonnet = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
